--- a/samples/public/index.html
+++ b/samples/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/react.svg" />
     <link rel="icon" href="%PUBLIC_URL%/images/react.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/global.css" />
     <title>ABReactUI Samples</title>
   </head>
   <body>
